# geodesy

./: CMakeLists.txt  README.md  TODO.md  main.cpp
assets/shader/: camera3d.frag  camera3d.vert  raylaunch.rgen  standard.vert  triangle.frag  triangle.vert  window.frag  window.vert
assets/shader/camera3d/: final.frag  opaque.frag  opaque.rchit  opaque.rgen  opaque.rmiss  raylaunch.rgen  standard.rchit  standard.rmiss  translucent.rgen
assets/shader/window/: window.frag
doc/: Design.md  TODO.md
doc/design/: TheGeodesyEngine.md
doc/manual/: geodesy.tex
doc/setup/: install.sh
inc/geodesy/: bltn.h  config.h  engine.h
inc/geodesy/bltn/: obj.h  stg.h
inc/geodesy/bltn/app/: unit_test.h
inc/geodesy/bltn/stg/: canvas.h  scene3d.h
inc/geodesy/core/: gcl.h  gfx.h  gpu.h  hid.h  io.h  lgc.h  math.h  phys.h  sfx.h  util.h
inc/geodesy/core/gcl/: acceleration_structure.h  buffer.h  command_batch.h  command_pool.h  config.h  context.h  descriptor.h  device.h  framebuffer.h  framechain.h  image.h  pipeline.h  semaphore_pool.h  shader.h  submission_batch.h  swapchain.h
inc/geodesy/core/gfx/: animation.h  font.h  material.h  mesh.h  model.h  node.h  renderer.h
inc/geodesy/core/gpu/: acceleration_structure.h  buffer.h  command_batch.h  command_pool.h  config.h  context.h  descriptor.h  device.h  framebuffer.h  framechain.h  image.h  pipeline.h  semaphore_pool.h  shader.h  submission_batch.h
inc/geodesy/core/hid/: config.h  input.h  joystick.h  keyboard.h  mouse.h
inc/geodesy/core/io/: dynalib.h  file.h  socket.h
inc/geodesy/core/lgc/: thread_controller.h  thread_tools.h  time_step.h  timer.h
inc/geodesy/core/math/: complex.h  config.h  constants.h  field.h  func.h  mat.h  quaternion.h  vec.h
inc/geodesy/core/phys/: animation.h  collision.h  force.h  mesh.h  node.h
inc/geodesy/core/sfx/: emitter.h  listener.h
inc/geodesy/core/util/: log.h  variable.h
inc/geodesy/ecs/: app.h  object.h  stage.h  subject.h
inc/geodesy/runtime/: app.h  object.h  stage.h  subject.h
src/: engine.cpp
src/bltn/app/: unit_test.cpp
src/bltn/stg/: canvas.cpp  scene3d.cpp
src/core/gcl/: acceleration_structure.cpp  buffer.cpp  command_batch.cpp  command_pool.cpp  context.cpp  descriptor.cpp  device.cpp  framebuffer.cpp  framechain.cpp  glslang_util.cpp  glslang_util.h  image.cpp  pipeline.cpp  semaphore_pool.cpp  shader.cpp  submission_batch.cpp  swapchain.cpp
src/core/gfx/: animation.cpp  font.cpp  material.cpp  mesh.cpp  model.cpp  node.cpp  renderer.cpp
src/core/gpu/: acceleration_structure.cpp  buffer.cpp  command_batch.cpp  command_pool.cpp  context.cpp  descriptor.cpp  device.cpp  framebuffer.cpp  framechain.cpp  glslang_util.cpp  glslang_util.h  image.cpp  pipeline.cpp  semaphore_pool.cpp  shader.cpp  submission_batch.cpp
src/core/hid/: input.cpp  joystick.cpp  keyboard.cpp  mouse.cpp
src/core/io/: dynalib.cpp  file.cpp  socket.cpp
src/core/lgc/: thread_controller.cpp  time_step.cpp  timer.cpp
src/core/phys/: animation.cpp  collision.cpp  force.cpp  mesh.cpp  node.cpp
src/core/sfx/: emitter.cpp  listener.cpp
src/core/util/: log.cpp  variable.cpp
src/ecs/: app.cpp  object.cpp  stage.cpp  subject.cpp
src/runtime/: app.cpp  object.cpp  stage.cpp  subject.cpp
